@@ -188,7 +188,7 @@ public class WaferMapDataset extends AbstractDataset {
      * @return The data value.
      */
     public Number getChipValue(int chipx, int chipy) {
-        return getChipValue(new Integer(chipx), new Integer(chipy));
+        return getChipValue(Integer.valueOf(chipx), Integer.valueOf(chipy));
     }
 
     /**
